force-app/main/default/objects/qtc_FulfillmentOrder__c/qtc_FulfillmentOrder__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Order</label>
    <nameField>
        <label>Fulfillment Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>