force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/atc_QuickBaseProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>atc_QuickBaseProjectNumber__c</fullName>
    <description>Qbase will systematically update this field on the Pseudo Order, even once it&apos;s locked down, if Qbase determines this quote can be merged with an existing project.</description>
    <label>QuickBase Project Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>