force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/Order_Interface_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Interface_Status__c</fullName>
    <label>Order Interface Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to SOUP</fullName>
            </value>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Order Booked</fullName>
            </value>
            <value>
                <fullName>Line Processed</fullName>
            </value>
            <value>
                <fullName>ERP Ready</fullName>
            </value>
            <value>
                <fullName>Data Issue on Lines</fullName>
            </value>
            <value>
                <fullName>Technical Issue(SOUP)</fullName>
            </value>
            <value>
                <fullName>Data Issue on Header</fullName>
            </value>
            <value>
                <fullName>Technical Issue(ERP)</fullName>
            </value>
            <value>
                <fullName>Order Shipped</fullName>
            </value>
            <value>
                <fullName>Order Under Process</fullName>
            </value>
            <value>
                <fullName>Quote Expired</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
                <isActive>false</isActive>
                <label>Technical Issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>