force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Bill_To_Site__c.field-meta.xml
<CustomField>
    <fullName>qtc_Bill_To_Site__c</fullName>
    <label>Bill To Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>