force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_CDP__c.field-meta.xml
<CustomField>
    <fullName>qtc_CDP__c</fullName>
    <description>CDP</description>
    <label>CDP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>