force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_CIS__c.field-meta.xml
<CustomField>
    <fullName>qtc_CIS__c</fullName>
    <description>Customer Implimentation specialist</description>
    <label>CIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>