force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Conversion_Type__c</fullName>
    <description>When the quote currency is different from the country&apos;s default currency, this identifies the exchange rate calculator used for the currency conversion.</description>
    <label>Conversion Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>