force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_CountNegativeProducts__c.field-meta.xml
<CustomField>
    <fullName>qtc_CountNegativeProducts__c</fullName>
    <description>Used to determine if an RMA is needed for this FO</description>
    <inlineHelpText>Count of Fulfillment Order Products with a negative quantity</inlineHelpText>
    <label>Count Negative Products</label>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Quantity__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>qtc_FulfillmentOrderProduct__c.qtc_FulfillmentOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>