force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>