force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Customer_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Customer_PO_Date__c</fullName>
    <label>Customer PO Date</label>
    <type>Date</type>
</CustomField>