force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_DeliverToSite__c.field-meta.xml
<CustomField>
    <fullName>qtc_DeliverToSite__c</fullName>
    <label>Deliver To Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>