force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_EligibleForERP__c.field-meta.xml
<CustomField>
    <fullName>qtc_EligibleForERP__c</fullName>
    <description>Count of Fulfillment Order Products with Quantity greater than 0</description>
    <label>Eligible For ERP</label>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Exclude_from_ERP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>qtc_FulfillmentOrderProduct__c.qtc_FulfillmentOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>