force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_ERP_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>qtc_ERP_Order_Status__c</fullName>
    <description>Assists in determining if the lines have fulfilled/shipped in ERP</description>
    <label>ERP Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>