force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_ERP_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_ERP_Quote_Type__c</fullName>
    <description>Identifies if the quote is a Hospitality or Classic NCR quote
ERP uses this label to derive specific functionality within OM</description>
    <label>ERP Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>