force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_ErpRmaOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>qtc_ErpRmaOrderNumber__c</fullName>
    <description>ERP RMA Order Number</description>
    <label>ERP RMA Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>