force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Existing_Aloha_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Existing_Aloha_Key_Number__c</fullName>
    <label>Existing Aloha Key Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>