force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>qtc_ExpectedDeliveryDate__c</fullName>
    <description>Created by ATG; will be used in QuickBase integration</description>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>