force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Has_Payments_Processing__c.field-meta.xml
<CustomField>
    <fullName>qtc_Has_Payments_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Payments Processing</label>
    <type>Checkbox</type>
</CustomField>