force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Invoice_Trigger__c.field-meta.xml
<CustomField>
    <fullName>qtc_Invoice_Trigger__c</fullName>
    <label>Invoice Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>