force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_MCN__c.field-meta.xml
<CustomField>
    <fullName>qtc_MCN__c</fullName>
    <label>MCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>