force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Opportunity_Number__c</fullName>
    <formula>qtc_Quote__r.SBQQ__Opportunity2__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>