force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Order_Authorization_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Order_Authorization_Accepted_Date__c</fullName>
    <label>Order Authorization Accepted Date</label>
    <type>DateTime</type>
</CustomField>