force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Order_Source__c.field-meta.xml
<CustomField>
    <fullName>qtc_Order_Source__c</fullName>
    <description>Identifies the origination source (application) of the order submitted to ERP.</description>
    <label>Order Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>