force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Order_Type__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>