force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_OrderStartDate__c.field-meta.xml
<CustomField>
    <fullName>qtc_OrderStartDate__c</fullName>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>