force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>qtc_Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Original Quote</relationshipLabel>
    <relationshipName>ChangeOrders</relationshipName>
    <type>Lookup</type>
</CustomField>