force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Packing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>qtc_Packing_Instructions__c</fullName>
    <label>Packing Instructions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>