force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Payments_Type__c.field-meta.xml
<CustomField>
    <fullName>qtc_Payments_Type__c</fullName>
    <label>Payments Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>