force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>qtc_PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>