force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>