force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Quote__c.field-meta.xml
<CustomField>
    <fullName>qtc_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Fulfillment Orders</relationshipLabel>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>