force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>qtc_Quote_Name__c</fullName>
    <label>Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>