force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Quote_Number__c</fullName>
    <formula>qtc_Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>