force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Requested_Delivery_Date__c</fullName>
    <label>Requested_Delivery_Date</label>
    <type>Date</type>
</CustomField>