force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_RMA_ORDER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>qtc_RMA_ORDER_NUMBER__c</fullName>
    <description>THIS FIELD STORES THE ORDER NUMBER OF THE ORIGINAL QUOTE USED IN RMA TEMPLATE</description>
    <label>RMA ORDER NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>