force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Sales_Org_Code__c</fullName>
    <label>Sales Org Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>