force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Salesperson_Global_ID__c.field-meta.xml
<CustomField>
    <fullName>qtc_Salesperson_Global_ID__c</fullName>
    <description>Global Id of the Sales Person. Availabel on user record.</description>
    <formula>Salesperson__r.Global_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Global Id of the Sales Person, availabel on Salesperson record.</inlineHelpText>
    <label>Salesperson Global ID</label>
    <type>Text</type>
</CustomField>