force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>qtc_Sequence_Number__c</fullName>
    <description>First time quote is submitted to ERP it is sent with number 0, Next time when same quote is submitted its sequence will increase by 1 each time it&apos;s resubmitted.</description>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>