force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>qtc_Ship_To_Account__c</fullName>
    <label>Ship To Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>