force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>qtc_Shipping_Instructions__c</fullName>
    <label>Shipping Instructions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>