force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>