force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/qtc_Transactional_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>qtc_Transactional_Currency_Code__c</fullName>
    <label>Transactional Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>