force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Channel Partner quote, field displays the CAM associated with the account on the Opportunity.  For all other quotes, field displays the SalesRep from the quote.</description>
    <inlineHelpText>If Channel Partner quote, field displays the CAM associated with the account on the Opportunity.  For all other quotes, field displays the SalesRep from the quote</inlineHelpText>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fulfillment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>