force-app/main/default/objects/qtc_FulfillmentOrder__c/fields/Shipping_Required__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Required__c</fullName>
    <description>Number of fulfillment product need to be shipped</description>
    <label>Shipping Required</label>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Completion_Date_Shipment_Date__c</field>
        <operation>equals</operation>
        <value>&apos;&apos;</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Exclude_from_ERP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>qtc_FulfillmentOrderProduct__c.qtc_Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>qtc_FulfillmentOrderProduct__c.qtc_FulfillmentOrder__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>