force-app/main/default/objects/qtc_FulfillmentOrder__c/validationRules/Prevent_Bill_To_And_Deliver_To_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Bill_To_And_Deliver_To_Update</fullName>
    <active>true</active>
    <description>Non Admin users are not supposed to update Bill To and Deliver to fields.</description>
    <errorConditionFormula>AND( ISPICKVAL(qtc_Quote__r.SBQQ__Type__c, &quot;Amendment&quot;), OR( ISCHANGED(qtc_Bill_To_Site__c),ISCHANGED(qtc_DeliverToSite__c) ) ,(!Contains($Profile.Name,&quot;System Administrator&quot;)) )</errorConditionFormula>
    <errorMessage>You cannot update Bill To and Deliver To in Amended FulFillment Order.</errorMessage>
</ValidationRule>